[gd_scene load_steps=2 format=3 uid="uid://cyl4kby6b0jy0"]

[ext_resource type="Script" uid="uid://slovdruvinh6" path="res://scenes/buttons/abutton.gd" id="1_b2nmy"]

[node name="AButton" type="Area2D"]
collision_layer = 8
collision_mask = 16
script = ExtResource("1_b2nmy")

[node name="Icon" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
